macros/tests/ui/bad_entry_param.stderr
error: `#[entry]` function must have signature `[unsafe] fn([<ident> : CriticalSection]) -> !`
 --> tests/ui/bad_entry_param.rs:6:1
  |
6 | fn main(i: u32) -> ! {
  | ^^^^^^^^^^^^^^^^^^^^
